CRM-12186 fix
----------------------------------------
* CRM-12186: Fonts in new profile editor preview mode are too small and wrapped.
  http://issues.civicrm.org/jira/browse/CRM-12186

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -42,6 +42,7 @@ div.crm-container label {
   margin: 0em 0em 1em;
   border-collapse: collapse;
   width: 100%;
+  font-size: 12px;
 }
 
 .crm-container table.criteria-group {
